--- a/public/conoceambar41/index.html
+++ b/public/conoceambar41/index.html
@@ -51,8 +51,8 @@
         <li class="text">Baño Oficina</li>
       </a>
     
-      <a href="javascript:void(0)" class="scene" data-id="9-zotano">
-        <li class="text">Zotano</li>
+      <a href="javascript:void(0)" class="scene" data-id="9-Sótano">
+        <li class="text">Sótano</li>
       </a>
     
       <a href="javascript:void(0)" class="scene" data-id="10-cuartomaquinas">
